# rtga

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmake/: package_version.cmake
include/rtga/: rtga.h  rtga_version.h.in
src/: rtga.c
tests/: CMakeLists.txt  rtga_test.c
